[gd_scene load_steps=53 format=2]

[ext_resource path="res://Menu/titlescreen_47.png" type="Texture" id=1]
[ext_resource path="res://Menu/play.png" type="Texture" id=2]
[ext_resource path="res://Menu/playhover.png" type="Texture" id=3]
[ext_resource path="res://Menu/controlsbutton.png" type="Texture" id=4]
[ext_resource path="res://Menu/leaderboardbutton.png" type="Texture" id=5]
[ext_resource path="res://Menu/controlsbuttonhover.png" type="Texture" id=6]
[ext_resource path="res://Menu/leaderboardbuttonhover.png" type="Texture" id=7]
[ext_resource path="res://Menu/exithover.png" type="Texture" id=8]
[ext_resource path="res://Menu/creditsbuttonhover.png" type="Texture" id=9]
[ext_resource path="res://Menu/exit.png" type="Texture" id=10]
[ext_resource path="res://Menu/creditsbutton.png" type="Texture" id=11]
[ext_resource path="res://Menu/Title_Screen.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=2]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=3]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=4]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=5]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=6]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=7]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=8]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2880, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=9]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 0, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=10]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 480, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=11]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 960, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=12]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1440, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=13]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1920, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=14]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2400, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=15]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2880, 270, 480, 270 )

[sub_resource type="AtlasTexture" id=16]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 0, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=17]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 480, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=18]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 960, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=19]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1440, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=20]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1920, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=21]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2400, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=22]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2880, 540, 480, 270 )

[sub_resource type="AtlasTexture" id=23]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 0, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=24]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 480, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=25]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 960, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=26]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1440, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=27]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1920, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=28]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2400, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=29]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2880, 810, 480, 270 )

[sub_resource type="AtlasTexture" id=30]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 0, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=31]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 480, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=32]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 960, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=33]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1440, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=34]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1920, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=35]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2400, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=36]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 2880, 1080, 480, 270 )

[sub_resource type="AtlasTexture" id=37]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 0, 1350, 480, 270 )

[sub_resource type="AtlasTexture" id=38]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 480, 1350, 480, 270 )

[sub_resource type="AtlasTexture" id=39]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 960, 1350, 480, 270 )

[sub_resource type="AtlasTexture" id=40]
flags = 8
atlas = ExtResource( 1 )
region = Rect2( 1440, 1350, 480, 270 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Title_Screen" type="Node2D"]
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 240, 135 )
scale = Vector2( 1.0125, 1.02963 )
frames = SubResource( 1 )
frame = 36
playing = true

[node name="Play" type="TextureButton" parent="."]
margin_left = 203.0
margin_top = 167.0
margin_right = 267.0
margin_bottom = 191.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="TextureButton" parent="."]
margin_left = 169.0
margin_top = 192.0
margin_right = 308.0
margin_bottom = 212.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 146.0
margin_top = 217.0
margin_right = 339.0
margin_bottom = 237.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 207.0
margin_top = 241.0
margin_right = 271.0
margin_bottom = 265.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 364.0
margin_top = 247.0
margin_right = 477.0
margin_bottom = 267.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
